[tool.poetry]
name = "fastapi-mock"
version = "0.3.4"
authors = ["Ruslan Belckov <ruslan.belckov@yandex.ru>"]
description = "A utility for FastAPI that allows you to create mock endpoints quickly and easily."
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [{ include = "fastapi_mock"}]

[tool.poetry.urls]
"Homepage" = "https://github.com/dantetemplar/fastapi-mock"
"Bug Tracker" = "https://github.com/dantetemplar/fastapi-mock/issues"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = ">=0.104"
pydantic = "^2"

[tool.poetry.group.test.dependencies]
uvicorn = "^0.24.0.post1"
faker = "^20.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
